Python model added - Transformation using MinMax scaler been tested.

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -42,6 +42,8 @@ models:
       +materialized: table
     models/metrics: 
       +materialized: table
+    models/python:
+      +materialized: table
 
 
 semantic-models:
